--- a/front/moviering_front/index.html
+++ b/front/moviering_front/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <style>
-      body{
+      body {
         background-color: black;
+        margin: 0;
       }
     </style>
-
   </head>
   <body>
     <div id="app"></div>
